--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
         <variable
-            name="text"
-            type="com.example.mlkittranslation.TextData" />
+            name="textData"
+            type="com.example.mlkittranslation.TextDataViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -34,7 +33,7 @@
             android:layout_marginTop="69dp"
             android:layout_marginEnd="176dp"
             android:layout_marginBottom="59dp"
-            android:text="@{text.text}"
+            android:text="@{textData.text}"
             app:layout_constraintBottom_toTopOf="@+id/capture_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -45,10 +44,12 @@
             android:layout_width="72dp"
             android:layout_height="72dp"
             android:layout_margin="24dp"
-            app:srcCompat="@android:drawable/ic_menu_camera"
+            android:layout_marginTop="147dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view_finder"
+            app:srcCompat="@android:drawable/ic_menu_camera" />
 
 
 
